# graphql-pal

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: _scrap.rs  main.rs  query_extractor.rs  schema_stats.rs
