[package]
authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
edition = "2018"
name = "graphql-pal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
globwalk = "0.8.1"
graphql-parser = "0.3.0"
indicatif = "0.16.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3"
swc_atoms = {git = "https://github.com/swc-project/swc"}
swc_common = {git = "https://github.com/swc-project/swc", features = ["tty-emitter"]}
swc_ecma_ast = {git = "https://github.com/swc-project/swc"}
swc_ecma_parser = {git = "https://github.com/swc-project/swc"}
swc_ecma_utils = {git = "https://github.com/swc-project/swc"}
swc_ecma_visit = {git = "https://github.com/swc-project/swc"}
termion = "1.5.6"
